util: Handle invalid UTF-8 in hyperlink tooltip

https://bugzilla.gnome.org/show_bug.cgi?id=786814