src/terminal-util.h
@@ -100,6 +100,9 @@ gboolean terminal_util_uri_is_allowed (const char *uri,
 
 char *terminal_util_hyperlink_uri_label (const char *str);
 
+gchar *terminal_util_utf8_make_valid (const gchar *str,
+                                      gssize       len) G_GNUC_MALLOC;
+
 G_END_DECLS
 
 #endif /* TERMINAL_UTIL_H */
